# WaveformAna

./: CMakeLists.txt  README.md  packages  setup.sh
.github/workflows/: cmake-single-platform.yml
AnaG4/: CMakeLists.txt  config.yaml
AnaG4/AnaG4/: AnaG4.hpp
AnaG4/src/: AnaG4.cpp
AnaHighBW/: CMakeLists.txt  config.yaml
AnaHighBW/AnaHighBW/: AnaHighBW.hpp
AnaHighBW/src/: AnaHighBW.cpp
AnaQuickScan/: CMakeLists.txt  config.yaml
AnaQuickScan/AnaQuickScan/: AnaQuickScan.hpp
AnaQuickScan/src/: AnaQuickScan.cpp
AnaSSRL/: CMakeLists.txt  config.yaml
AnaSSRL/AnaSSRL/: AnaSSRL.hpp
AnaSSRL/src/: AnaSSRL.cpp
AnaSimple/: CMakeLists.txt  config.yaml
AnaSimple/AnaSimple/: AnaSimple.hpp
AnaSimple/src/: AnaSimple.cpp
AnaTCT/: CMakeLists.txt
AnaTCT/AnaTCT/: AnaTCT.hpp
AnaTCT/src/: AnaTCT.cpp
analysisDriver/: CMakeLists.txt
analysisDriver/analysisDriver/: baseAna.hpp  driver.hpp  register.hpp
analysisDriver/src/: driver.cpp  register.cpp
analysisDriver/utils/: check_Ana.cpp  ls_Ana.cpp  run_Ana.cpp
baseAna/: CMakeLists.txt
baseAna/baseAna/: baseAna.hpp
baseAna/src/: baseAna.cpp
configMgr/: CMakeLists.txt
configMgr/configMgr/: baseConfigMgr.hpp  betaConfigMgr.hpp
configMgr/src/: betaConfigMgr.cpp
tests/: CMakeLists.txt  tester.cpp
utilities/: CMakeLists.txt
utilities/src/: getFiles.cpp  logger.cpp
utilities/utilities/: getFiles.hpp
waveformMethods/: CMakeLists.txt
waveformMethods/src/: baseline.cpp  cfdTime.cpp  cfdTime.hpp  filter.cpp  mix.cpp  noise.cpp  riseTime.cpp  thresholdTime.cpp  utils.cpp  waveArea.cpp  waveMax.cpp  waveNMax.cpp
waveformMethods/waveformMethods/: baseline.hpp  core.hpp  filter.hpp  utils.hpp  waveformMethods.hpp
